# ros2_study

./: .gitignore
3d_point_clound/: demo.md  environment.md  point_clound_process.md  summary.md
3d_point_clound/code/demo/test_lib_install/: .gitignore  CMakeLists.txt  main.cpp
3d_point_clound/code/demo/test_lib_install/src/: cloud_process.cpp
3d_point_clound/code/demo/test_lib_install/src/include/: cloud_process.h
daily_report/: 202507.md
notes/: .compile_ros2_project.md.swp  command.md  compile_ros2_project.md  ros2_general_architecture.md
ordinary_problem/: hunt_question.md  hunt_question_250707.md  hunt_question_250708.md  ubuntu.md
ordinary_problem/C++/: qa.md
ordinary_problem/docker/: install_ae_soft.md  manual.md
ordinary_problem/zsh/: after_install_zsh.md  zsh.md
qt_notes/: qt5_problem.md  qt5环境搭建说明.md  qt_Q_OBJECT.md  qt_enviroment_set.md
qt_notes/vscode的配色方案/: vscode.xml
qt_notes/vscode的键盘快捷键/: Xcode.kms
ros2/: after_install_ros2_initialize.sh  command.md
ros2/ws/chapt2/: .gitignore  1.cpp  CMakeLists.txt  ros2_cpp_node.cpp
ros2/ws/chapt2/demo_cpp_node/: CMakeLists.txt
ros2/ws/chapt2/demo_python_pkg/: .gitignore.swp
ros2/ws/chapt2/demo_python_pkg/demo_python_pkg/: python_node.py
ros2_notes/: command.md
ros2_notes/202512/: 0101_gazebo_ex.md  1225_topic.md  1226.md  1226_server.md  1229_server_launch.md  1230_TF.md  1230_TF_ex.md  1231_gazebo.md  1231_ros_tools.md  1231_ros_tools_ex.md  resume.md  ros_install.md  要点.md  配置服务器.md  项目.md  项目知识点.md
ros2_notes/202601/: 0112-0118.md  0112_ESP32.md  0119-0125.md
ros2_notes/202601/0101-0111/: 0101_gazebo.md  0102-03_xacro.md  0102-03_xacro_ex.md  0104_6.gazebo.md  0104_6.gazebo_ex.md  0105_6.add_sensors.md  0105_6.add_sensors_ex.md  0106_6.sensor_control.md  0106_6.sensor_control_ex.md  0107_7-9_nav2_ex.md  0107_78_nav2.md
ros2_notes/humanoid_robot/: 北京中关村学院.md  北京人形机器人公司.md  简介.md  银河通用.md
ros2_notes/misc/: linux_clash.md
ros2_notes/project/moveit_in_gazebo/: 在gazebo中让机械臂运动.md
ros2_notes/report/: 202601.md
ros2_notes/robotic_arm/: 1.ROS机器人开发技术基础-目录.md  2.ROS机械臂开发与实践-目录.md
ros2_notes/面试准备/: C++总结.md  CMakeLists.txt  resume.md  面试准备资料-ROS.md
script/: clearup_core_files.sh  clearup_core_files_analyse.md  copy_cler.sh  pack.sh  pack_analyse.md
script/ae/: bend_install.sh  make_package.sh  palletize_install.sh  weld_copyDL.sh  weld_install.sh  weld_sync_files.sh
ws/chapt2/chapt2_ws/src/demo_cpp_node/: CMakeLists.txt
ws/chapt2/chapt2_ws/src/demo_python_pkg/: .gitignore
ws_graffiti/chapt2/: CMakeLists.txt  ros2_python_node.py
ws_graffiti/chapt2/chapt2_ws/src/demo_cpp_node/: package.xml
ws_graffiti/chapt2/chapt2_ws/src/demo_python_pkg/demo_python_pkg/: python_node.py
ws_graffiti/demo1_cpp_pkg/: CMakeLists.txt  package.xml
ws_graffiti/demo1_cpp_pkg/src/: demo1.cpp
ws_train/ws/chapt2/demo_cpp_node/: CMakeLists.txt
ws_train/ws/chapt2/demo_cpp_node/src/: .cpp_node.cpp.swp
